# DataCode

./: .datacode_history  .gitignore  ARRAYS_GUIDE.md  Cargo.toml  Dockerfile  ENHANCED_DATA_TYPES_SUMMARY.md  FEATURES_STATUS.md  INSTALL.md  Makefile  PERFORMANCE_ANALYSIS_REPORT.md  README.md  TABLES_IMPLEMENTATION_SUMMARY.md  debug_complex_function.sh  debug_csv.dc  debug_division.sh  debug_simple_local.sh  debug_variable_lookup.sh  install.sh  setup.sh  test.dc  test2.dc  test_comments.dc  test_debug.dc  test_division_by_zero.dc  test_file_reading_demo.dc  test_functions_manual.sh  test_local_vars.sh  test_multiline.sh  test_object_literal.dc  test_repl.sh  test_smart_division.dc  uninstall.sh
.gitreports/: ADVANCED_TESTS_REPORT.md  ARRAYS_GUIDE.md  FEATURES_STATUS.md  IMPLEMENTATION_REPORT.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_REPORT.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  TABLES_IMPLEMENTATION_SUMMARY.md
data/: test.txt
datacode_web_docs/: index.html  script.js  styles.css
datacode_web_editor/: README.md  editor.js  example.dc  syntax-highlighter.js
docs/: DEMO_RESULTS.md  README.md  phase4_completion_report.md  phase4_final_success_report.md  table_create_function.md  websocket_server.md
examples/: INDEX.md  QUICK_TEST.md  README.md  TABLE_EXAMPLES.md  arrays_example.dc  complex_expressions.dc  conditionals.dc  enum_demo.dc  error_handling.dc  filter_demo_basic.dc  functions.dc  hello.dc  loops.dc  recursion.dc  stress_benchmark.dc  table_demo.dc  type_conversion_guide.dc
fix_load_model/: ARCHITECTURE_ANALYSIS.md  BUG_ANALYSIS.md  DETAILED_FIX_PLAN.md  PLAN_FIX_FOR_LOOP.md  README.md  TESTING_PLAN.md  TEST_REPORT.md  functions.dc  load_model_data.dc  test_01_functions.dc  test_02_for_with_try.dc  test_03_main_part.dc  test_04_minimal_error.dc  test_05_exact_structure.dc  test_06_after_function.dc  test_07_function_with_nested_for.dc  test_08_debug_try.dc  test_09_list_files_before_try.dc  test_10_relate_real_data.dc  (+30 more)
(+481 files in other folders)
