[package]
name = "data_code"
version = "1.4.0"
edition = "2021"
description = "DataCode - Interactive Programming Language for fast data processing"
license = "MIT"
authors = ["Igor <igornet0@users.noreply.github.com>"]
repository = "https://github.com/igornet0/DataCode"
keywords = ["programming-language", "interpreter", "repl", "data-processing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "datacode"
path = "src/main.rs"

[dependencies]
lapin = "2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0.98"
chrono = "0.4.41"
csv = "1.3.1"
calamine = "0.28.0"
rustyline = "14.0"
glob = "0.3"
regex = "1.10"
rand = "0.8"
