[package]
name = "data_code"
version = "1.7.1"
edition = "2021"
description = "DataCode - Interactive Programming Language for fast data processing"
license = "MIT"
authors = ["Igor <igornet0@users.noreply.github.com>"]
repository = "https://github.com/igornet0/DataCode"
keywords = ["programming-language", "interpreter", "repl", "data-processing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "datacode"
path = "src/main.rs"

[dependencies]
lapin = "2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0.98"
chrono = "0.4.41"
csv = "1.3.1"
calamine = "0.28.0"
rustyline = "14.0"
glob = "0.3"
regex = "1.10"
rand = "0.8"

# Фаза 3: Векторизация и параллелизм (упрощенная версия)
rayon = "1.8"

# Фаза 4: Оптимизация I/O и встроенных функций
memmap2 = "0.9"    # Для memory-mapped файлов

# Фаза 5: Профилирование и инструментирование
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket сервер для удаленного выполнения кода
tokio-tungstenite = "0.21"
tungstenite = "0.21"
base64 = "0.22"

# SQLite экспорт для модели данных
rusqlite = { version = "0.30", features = ["bundled"] }
